Refactor KerbalProfile and enhance save data

--- a/src/WayfarersWings/WayfarersWings.csproj
+++ b/src/WayfarersWings/WayfarersWings.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
     <ItemGroup>
         <Folder Include="Patches\Simulation\"/>
+        <Folder Include="Utility\Serialization\"/>
     </ItemGroup>
 </Project>
 
