--- a/src/WayfarersWings/WayfarersWings.csproj
+++ b/src/WayfarersWings/WayfarersWings.csproj
@@ -24,5 +24,10 @@
     <ItemGroup>
         <Folder Include="Patches\Simulation\"/>
     </ItemGroup>
+    <ItemGroup>
+        <Reference Include="Assembly-CSharp">
+            <HintPath>..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Kerbal Space Program 2\KSP2_x64_Data\Managed\Assembly-CSharp.dll</HintPath>
+        </Reference>
+    </ItemGroup>
 </Project>
 
