Fix KSP2 version replacement in topic title

--- a/.github/workflows/forum.yml
+++ b/.github/workflows/forum.yml
@@ -54,7 +54,7 @@ jobs:
           username: ${{ secrets.KSP_FORUM_USERNAME }}
           password: ${{ secrets.KSP_FORUM_PASSWORD }}
           forum_topic_url: https://forum.kerbalspaceprogram.com/topic/223457-wayfarers-wings-rank-ribbons-v030-for-ksp2-v021/
-          forum_topic_title: "Wayfarer's Wings (Rank Ribbons) [v{version} for KSP2 v0.2.1]"
+          forum_topic_title: "Wayfarer's Wings (Rank Ribbons) [v{version} for KSP2 v{ksp2_version}]"
           spacedock_url: "https://spacedock.info/mod/3554/Wayfarer's%20Wings%20(Rank%20Ribbons)#changelog"
           version: ${{ env.version }}
           changelog: ./changelog.md
