--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -41,5 +41,5 @@ jobs:
           content: ${{ env.discord_message }}
           thread-id: ${{ env.MOD_THREAD_ID }}
           username: "Wayfarer's Wings"
-          avatar-url: "https://avatars.githubusercontent.com/u/98559431?s=200&v=4""
+          avatar-url: "https://avatars.githubusercontent.com/u/98559431?s=200&v=4"
           
