--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: Upload release
 
 env:
   SPACEDOCK_MOD_ID: 3554 # WayfarersWings
+  MOD_DISCORD_THREAD_ID: "1203146131266207794"
 
 on:
   release:
@@ -82,3 +83,23 @@ jobs:
           spacedock_url: "https://spacedock.info/mod/3554/Wayfarer's%20Wings%20(Rank%20Ribbons)#changelog"
           version: ${{ env.version }}
           changelog: ./changelog.md
+          
+      - name: Prepare content for discord
+        shell: bash
+        run: |
+          echo -e "## Release v${version}\n" > ./content.md
+          cat ./changelog.md >> ./content.md
+          {
+            echo 'discord_message<<EOF'
+            cat ./content.md
+            echo EOF
+          } >> "$GITHUB_ENV"
+
+      - name: Publish update to Discord
+        uses: tsickert/discord-webhook@v5.3.0
+        with:
+          webhook-url: ${{ secrets.DISCORD_KMS_WEBHOOK_URL }}
+          content: ${{ env.discord_message }}
+          thread-id: ${{ env.MOD_DISCORD_THREAD_ID }}
+          username: "Wayfarer's Wings"
+          avatar-url: "https://avatars.githubusercontent.com/u/98559431?s=200&v=4"
